--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "chart.js": "^3.8.0",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "18.1.0",
     "sass": "^1.52.1"
   },
